kubernetes/apps/cilium/cilium/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hubble
spec:
  parentRefs:
    - name: envoy-internal
      kind: Gateway
      namespace: envoy-system
      sectionName: https
  hostnames:
    - hubble.${DOMAIN_NAME}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
